# label-craft

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
config/: config.yaml  data_download.yaml  inference.yaml  train.yaml  training.yaml
config/data/: processing.yaml  sources.yaml
config/models/: base_model.yaml
label_craft/: __init__.py  data_module.py  inference.py  model.py  train.py
label_craft/data/: __init__.py  data_module.py
label_craft/logging/: __init__.py  mlflow_logger.py
label_craft/metrics/: __init__.py  hierarchical_distance_accuracy.py
label_craft/models/: __init__.py  model.py
label_craft/scripts/: download_data.py
scripts/: download_data.py
