[tool.poetry]
name = "label-craft"
version = "0.1.0"
description = "Label craft"
authors = ["Alexander Sokolov <sokolov23al@gmail.com>"]
packages = [{include = "label_craft"}]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^3.0.0"
hydra-core = "^1.3.0"
requests = "^2.31.0"
omegaconf = "^2.3.0"
loguru = "^0.7.3"
pytorch-lightning = "^2.0.0"
transformers = "^4.30.0"
torch = "^2.0.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
pyarrow = ">=4.0.0,<20"
numpy = "<2.0.0"
tensorboard = "^2.15.0"
mlflow = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
train = "label_craft.train:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"